stylesheet.less
/* ... */
.widget.profile ul.twitter .twitter-profile-pic, .widget.profile ul.twitter time, .widget.profile ul.twitter span {
    display: inline-block;
}

.widget.profile ul.twitter .twitter-profile-pic {
    vertical-align: top;
}

.widget.profile ul.twitter .twitter-content {
    padding-left: 0;
    display: inline-block;
}


/* ===============================
   SOCIAL ICONS
   =============================== */

.widget.socialicons {
    clear: both;
    min-height: 47px;
    width: 100%;
}


.widget.profile .bk-profile-socialicons span a,
.widget.socialicons span a  {
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border-radius: 50px;
    background-color: @color-swatch4;
}

.widget.profile .bk-profile-socialicons a {
    text-decoration: none;
    text-indent: -9999px;
    white-space: nowrap;
}

/* A:HOVER ICONS */

.widget.socialicons span.bk-socialicons-twitter a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a:hover {
    background-color: #4099FF;
}

.widget.socialicons span.bk-socialicons-linkedin a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-linkedin a:hover {
    background-color: #007bb6;
}

.widget.socialicons span.bk-socialicons-facebook a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-facebook a:hover {
    background-color: #3B5998;
}

.widget.socialicons span.bk-socialicons-rss a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-rss a:hover {
    background-color: #FF6600;
}

.widget.socialicons span.bk-socialicons-googleplus a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a:hover {
    background-color: #dd4b39;
}

.widget.socialicons span.bk-socialicons-youtube a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a:hover {
    background-color: #bb0000;
}


/* ===============================
   SLIDESHOW WIDGET
   =============================== */

.widget.responsiveslideshow .slideshow-widget {
	position: relative;
	.btn-prev,
	.btn-next,
	.btn-play {
		text-indent: 100px;
		overflow: hidden;
		background-color: fadeout(@font-swatch7-background-color, 50%);
		border-radius: 3px;
		width: 36px;
		height: 36px;
		position: absolute;
		top: 50%;
		margin-top: -18px;
		&:after {
			font-size: bkscale(@font-swatch7-font-size, 1.7);
			line-height: bkscale(@font-swatch7-line-height, 1.9);
			color: @font-swatch7-color;
		}
	}
	.btn-play {
		width: 44px;
		height: 44px;
		left: 50%;
		margin-left: -22px;
	}
	.btn-prev,
	.btn-next {
		&:after {
			width: 0;
			height: 0;
			content: "";
			position: absolute;
			top: 8px;
			left: 10px;
			border: 10px solid transparent;
		}
	}
	.btn-prev:after {
		border-right-color: @font-swatch7-color;
		left: 2px;
	}
	.btn-next:after {
		border-left-color: @font-swatch7-color;
		left: 14px;
	}
	&-controls .dot {
		border-radius: 10px;
		border-color: @font-swatch5-color;
	}
	&-controls .dot.selected {
		background: @font-swatch7-background-color;
	}
	.content-wrapper {
		background-color: fadeout(@font-swatch5-color, 50%);
	}
}

/* ===============================
   GALLERY WIDGET
   =============================== */

.widget.gallery {
    margin: 20px 0 20px -0.5%;
    ul li {
        @media @tablet {
            width: 50%;
            padding-bottom: 50%;
        }
        @media @mobile {
            width: 100%;
            padding-bottom: 100%;
        }
        span.inner {
            .title,
            .description {
                // Font
                color: @font-swatch5-color;
                font-family: @font-swatch5-font-family;
                letter-spacing: @font-swatch5-letter-spacing;
                text-align: left;
            }
            .title {
                font-size: 18px;
                font-weight: 600;
                line-height: 30px;
            }
            .description {
                font-size: 13px;
                line-height: 25px;
            }
        }
    }
    // Image Data
    .image-data {
        display: block;
        opacity: 0;
        background-color: @color-swatch2;
        -webkit-transition: all 0.4s ease-out;
        -moz-transition: all 0.4s ease-out;
        -o-transition: all 0.4s ease-out;
        transition: all 0.4s ease-out;
        &:hover {
            opacity: 1;
        }
    }
}

/* Lightbox */

.lb-data .lb-caption, .lb-data .lb-number {
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight: @font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:lighten(@font-swatch5-color,50%);
}

.lb-data .lb-number {
  font-size:bkscale(@font-swatch5-font-size,0.9);
}

/* ===============================
   MENU SECTIONS NAVIGATION
   =============================== */

.widget {
    &.menusections {
        padding: 0.5em 0 0;
        @media @tablet {
            margin-top: 1.5em;
        }
        @media only screen and (max-width: 550px) {
            padding:0;
            margin-top:0;
            padding: 0 0 0;
        }
        ul {
            display: table;
            width: 100%;
            margin: 0 auto;
            list-style: none;
            padding: 0;
            li {
                display: inline-block;
                padding: 0 15px 10px 0;
                margin: 0;
                &:last-child {
                    padding-right: 0;
                    @media only screen and (max-width: 550px) {
                        border-bottom: 1px solid darken(@color-swatch1,7%);
                    }
                }
                @media only screen and (max-width: 550px) {
                    width: 100%;
                    border-top: 1px solid darken(@color-swatch1,7%);
                    padding: 15px 0 10px 0;
                }
            }
        }
    }
}
/* ... */

